# vox2

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  Justfile  README.md  SECURITY.md  context.json  requirements.txt  task_tree.yaml
.devcontainer/: devcontainer.json  (+1 more)
constitutional-agent-test/: IMPLEMENTATION_PLAN.md  MVP_PRODUCT_SPEC.md  README.md  USAGE.md  VERSION_COMPARISON.md  agent.py  agent_enhanced.py  context.json  context_manager.py  prompt_strategy.md  pyproject.toml  run_exec_ticket.py  task_tree.yaml  test_dynamic_context.py  test_enhanced_agent.py  tools.py
constitutional-agent-test/.aider_cache/: codebase.db
constitutional-agent-test/_archive/: README.md
constitutional-agent-test/constitutional_agent_test.egg-info/: SOURCES.txt  top_level.txt
constitutional-agent-test/data/: reflections.md  sample_task_tree.yaml  stakeholders.yaml
constitutional-agent-test/enhanced_version/: FRAMEWORK_COMPARISON.md  agent_enhanced.py  llm_client.py  minimal_test.py
constitutional-agent-test/executive_worker/: __init__.py  agent.py  codebase_utils.py  edit_engine.py  enhanced_codebase_utils.py  enhanced_edit_engine.py  error_recovery.py  git_ops.py  llm_client.py  models.py  prompting.py  shell_runner.py  task_tree.py
constitutional-agent-test/naming-test/: timestamp_first_naming_test.py
constitutional-agent-test/original_version/: improvement_loop.md  test_eoi_navigation.py
constitutional-agent-test/prompts/: constitutional_system_prompt.md
constitutional-agent-test/research/: agentic-repos-borrowables.md
constitutional-agent-test/src/: lib.rs
(+117 files in other folders)
